feat: lightrag openai complete

--- a/.gitignore
+++ b/.gitignore
@@ -137,6 +137,11 @@ ENV/
 env.bak/
 venv.bak/
 
+*.log
+
+/lightrag/rag_storage
+/lightrag/data
+
 # Spyder project settings
 .spyderproject
 .spyproject
