--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,12 @@
-NEO4J_USER = <your_user_name_for_neo4j>
-NEO4K_PASSWORD = <your_password_for_neo4j>
+# LightRAG
+WORKING_DIR =
+DATA_DIR =
+LOG_DIR =
+
+# OpenAI
+OPENAI_API_KEY =
+
+# Database
+NEO4J_URI =
+NEO4J_USERNAME =
+NEO4J_PASSWORD =
