--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "neo4j>=5.28.1",
+    "wcwidth>=0.2.13",
+]
 
 [dependency-groups]
 dev = [
